--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,22 @@
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+ul,
+ol {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+img {
+    display: block;
+}
 .list {
     list-style-type: none;
 }
@@ -9,6 +27,10 @@ body {
     font-family: "Roboto", sans-serif;
     color: #434455;
     background-color: #FFFFFF;
+}
+.section {
+padding-top: 120px;
+padding-bottom: 120px;
 }
 /* =======HEADER STYLES ======*/
 .logo {
@@ -78,6 +100,7 @@ color: #404BBF;
     line-height: 1.07;
     letter-spacing: 0.02em;
     color: #FFFFFF;
+    margin-bottom: 48px;
 }
 .button {
     color: #FFFFFF;
@@ -88,6 +111,12 @@ color: #404BBF;
     background: #4D5AE5;
     line-height: 1.5;
     letter-spacing: 0.04em;
+    display: inline-flex;
+        padding: 16px 32px;
+        align-items: flex-start;
+        gap: 10px;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .button:hover {
