--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ color: #404BBF;
 }
 .address-list {
     display: flex;
-    column-gap: 40px;
+    gap: 40px;
 }
 .contacts {
     font-family: 'Roboto',sans-serif;
@@ -97,7 +97,7 @@ color: #404BBF;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    display: flex;
+
 }
 
 .contacts:hover {
@@ -181,8 +181,9 @@ color: #404BBF;
     gap: 24px;
 
 }
-.menu-item {
-    width: calc((100% - 72px) / 4;
+.menu-item-benefits {
+    width: calc((100% - 72px) / 4);
+    align-items: center;
 }
 .menu-item-titel {
     font-family: 'Roboto', sans-serif;
@@ -249,7 +250,16 @@ color: #404BBF;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
+.menu-portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    row-gap: 48px;
+}
+.portfolio-item {
+    width: calc((100% - 48px) / 3);
 
+}
 /*======PAGE FOOTER=====*/
 .footer {
     background-color: #2E2F42;
@@ -272,4 +282,15 @@ color: #404BBF;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #F4F4FD;
+}
+.logo-footer {
+    color: #4D5AE5;
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    display: inline-block;
+    margin-bottom: 16px;
 }
