--- a/css/styles.css
+++ b/css/styles.css
@@ -168,12 +168,19 @@ color: #404BBF;
     background-color: #F4F4FD; 
     padding: 120px 0;
 }
-.benefits {
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 .secondary-menu {
     line-height: 1.5;
@@ -210,7 +217,7 @@ color: #404BBF;
 .our-team {
     background-color: #F4F4FD;
 }
-.titel {
+.title {
     font-family: 'Roboto', sans-serif;
     font-size: 36px;
     font-weight: 700;
