--- a/css/styles.css
+++ b/css/styles.css
@@ -204,12 +204,13 @@ color: #404BBF;
 }
 .paragraf {
     color: #434455;
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        align-items: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    align-items: center;
+    text-align: left;
 }
 
 
@@ -235,12 +236,26 @@ color: #404BBF;
 }
 .names {
     color: #2E2F42;
-        text-align: center;
-        font-family: 'Roboto', sans-serif;
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 1.2;
-        letter-spacing: 0.02em;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
+}
+.container-name {
+    padding: 32px 0;
+}
+.paragraf-team {
+    color: #434455;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    align-items: center;
+    text-align: center;
 }
 /*======OUR PORTFOLIO======*/
 .examples {
