--- a/css/styles.css
+++ b/css/styles.css
@@ -245,7 +245,7 @@ color: #404BBF;
     letter-spacing: 0.02em;
     margin-bottom: 8px;
 }
-.container-teams {
+.container-team {
     padding: 32px 0;
 }
 .paragraf-team {
