--- a/css/styles.css
+++ b/css/styles.css
@@ -70,13 +70,18 @@ color: #4D5AE5;
         margin-right: 76px;
 }
 .menu-link {
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #2E2F42;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+     letter-spacing: 0.02em;
+    color: #2E2F42;
+    display: block;
+    text-align: left;
+    position: relative;
+    padding: 24px 0;
 }
+
 .menu-link:hover {
 color: #404BBF;
 }
@@ -88,6 +93,8 @@ color: #404BBF;
 }
 .address-list {
     display: flex;
+    flex-direction: row;
+    align-items: center;
     gap: 40px;
 }
 .contacts {
@@ -98,7 +105,7 @@ color: #404BBF;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
-
+    display: block;
 }
 
 .contacts:hover {
@@ -115,9 +122,20 @@ color: #404BBF;
 }
 .menu {
     display: flex;
-    gap: 24px;
+    flex-direction: row;
+    gap: 40px;
+    align-items: center;
 }
+ .header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+ }
 
+ .header-nav-bar {
+     display: flex;
+     align-items: center;
+ }
 
 
 /* ====== HERO SECTION =====*/
